--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,15 @@
   font-display: swap;
 }
 
+
+@font-face {
+  font-family: "AlbertSans";
+  src: url("assets/fonts/Albert_Sans/static/AlbertSans-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
 @font-face {
     font-family: "AlbertSans";
     src: url("assets/fonts/Albert_Sans/static/AlbertSans-Bold.ttf") format("truetype");
